Bug 412967 - Terminal does not sync to document path the first time when document is opened from File > Open or File > Open recent
Summary: Terminal does not sync to document path the first time when document is opene...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: Git
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-10-15 09:58 UTC by Syam
Modified: 2021-01-28 16:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Syam 2019-10-15 09:58:24 UTC
STEPS TO REPRODUCE
1. Start Kate
2. Open a recently opened document from File > Open recent
3. Notice that terminal does not change working directory
Comment 1 Syam 2020-07-22 09:00:18 UTC
It seems the problem is only with the very first document opened after starting Kate.
To reproduce:
1. Start Kate
2. Open any document by File > Open or File > Open recent
3. Notice that terminal does not change working directory
Comment 2 Justin Zobel 2020-10-30 02:57:29 UTC
Confirmed on git master.
Comment 3 Bug Janitor Service 2021-01-27 06:58:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/205
Comment 4 Nate Graham 2021-01-28 16:02:53 UTC
Fixed by Jan Paul Batrina with the commits in https://invent.kde.org/utilities/kate/-/merge_requests/205 in Kate 21.04!