Konsole plugin: Sync terminal path when the current document's url changes

BUG: 412967